--- a/_posts/0000-01-02-Darksine1.md
+++ b/_posts/0000-01-02-Darksine1.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our exercise slide!"
 ---
-Learning on GitHub and now in Desktop!
+Learning on GitHub and now in Desktop! :v
 Use the left arrow to go back!
